# autocoder

./: .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  SPEC.md  build.py  check_repos.py  ci_cd_build.py  cli.py  cross_api.py  daemon.py  engine.py  engine_ref.py  environment.py  gui.py  integration.py  llm_adapter.py  main.py  pyproject.toml  requirements.txt  run.bat  setup.bat  system_check.py  tasks.py  version.py
.github/workflows/: lint.yml  tests.yml  typecheck.yml
config/: default.yaml
core/: __init__.py  hardware.py  nl_processor.py  verifier.py
mcp/: __init__.py  client.py  server.py  types.py
meta/: __init__.py  experience_store.py  knowledge_graph.py  meta_cognition.py  self_learner.py
models/: __init__.py  cache.py  orchestrator.py
security/: __init__.py  key_store.py
tests/: test_core.py
tools/: __init__.py  ide_integration.py  playwright_tool.py  process_manager.py
web/templates/: index.html
